tests/integration/errors/test_struct_circular_self_ref.sn
# Error test: struct with direct circular dependency (self-reference)

struct Node =>
    value: int
    next: Node

fn main(): void =>
    print("Should not compile\n")
